--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div>
+        <p>USA dollár: <span id="usd"></span></p>
+    </div>
+    <div>
+        <p>Euró dollár: <span id="eur"></span></p>
+    </div>
+    <div>
+        <p>Angol font: <span id="gdb"></span></p>
+    </div>
+    <div>
+        <p>Euró dollár: <span id="eur"></span></p>
+    </div>
+
     <script src="alap.js"></script>
 </body>
 </html>
