--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         <p>Euró dollár: <span id="eur"></span></p>
     </div>
     <div>
-        <p>Angol font: <span id="gdb"></span></p>
+        <p>Angol font: <span id="gbp"></span></p>
     </div>
     <div>
-        <p>Euró dollár: <span id="eur"></span></p>
+        <p>Román lej: <span id="ron"></span></p>
+    </div>
+    <div>
+        <p>Kínai juan: <span id="cny"></span></p>
     </div>
 
     <script src="alap.js"></script>
